# fotix_ultimaversao_28_05_2025

./: .augmentcodeignore  .coverage  .coveragerc  .gitignore  .ignore  .vscodeignore  LICENSE  README.md  RELATORIO_IMPLEMENTACAO_LOGGING_CONFIG.md  Untitled-1.md  arquitetura_fotix.md  arquitetura_testes_fotix.md  atualizar-github.bat  check_fotix_imports.py  coverage.xml  debug_logging.py  example_usage.py  implementacao_duplicate_finder.md  iniciar-trabalho.bat  mocked_path  pyproject.toml  run_all_tests_with_coverage.py  run_tests.bat  run_tests.py  run_tests_with_output.py  setup.py  test_coverage_results.txt  test_results.txt
.cursor/rules/: diretriz-bug.mdc  implementadormestre.mdc  implementadortestedeintegracao.mdc
Docs/Implementation/Prompts/FilledPrompts/: Prompt_Severino-Core_Decision_Logic.md  Prompt_Severino_EspeciFi_v1.0.md  Prompt_Tocrisna_Architecture_v1.0.md
Docs/Implementation/Prompts/Injected/: Output_Tocle_Core-Duplicate.md  Output_Tocle_decisionLogVERIFICAREDELETARSEPRECISO.md  Output_Tocle_decisionLogic2.md  Prompt_F4.1_Implementador_TesteDeIntegracao_v1.0.md  Prompt_F4_Implementador_Mestre_v1.2.md  Prompt_F4_Implementador_Mestre_v1.4.md  Prompt_F4_Implementador_Mestre_v1.5.md  Prompt_F4_Implementador_Mestre_v1.6.md  Prompt_F4_Implementador_Mestre_v1.7.md  Prompt_F4_Implementador_Mestre_v1.8.md  Prompt_F4_Implementador_Mestre_v1.9.md  Prompt_F4_Implementador_Mestre_v2.0.md  Prompt_F4_Implementador_Mestre_v2.1.md  Prompt_F4_Implementador_Mestre_v2.2.md  Prompt_F4_Implementador_Mestre_v2.4.md  Prompt_F4_Implementador_Mestre_v2.7 copy.md  Prompt_F4_Implementador_Mestre_v2.7.md  Prompt_F5_Gerador_Testes_Manuais.v1.0.md  Prompt_F5_Gerador_Testes_Manuais.v1.2.md  Prompt_F5_Gerador_Testes_Manuais_UAT_v1.2.md
Docs/Implementation/Prompts/Output/: Output_BluePrint_Arquitetural_Tocrisna_NOVO_LLM_PURA_GEMINI2.5_PRO_v1.0.md  Output_BluePrint_Arquitetural_Tocrisna_v3.md  Output_Ordem_Para_Implementacao_Geral.md  Output_Ordem_Para_Implementacao_Geral_NOVO.md  Output_Severino_DecisionLogic2.md  Output_Tocrisna_Architecture_v1.0.md  Severino_Core-Decision_Logic.md  Severino_Core-Duplicate_Finder.md  teste_h.md
Docs/Implementation/Prompts/Templates/: Prompt_Formatador_MarkdownAgv_v1.0.md  Prompt_Severino_EspeciFi_v1.0.md  Prompt_Tocle_Implementation_v1.0.md  Prompt_Tocrisna_Architecture_v1.0.md
Docs/Implementation/Research/: ChatGPT-o3_Teste_Resultado.md  ChatGPTDeepResearch_Teste_Resultado.md  Claude3.7Sonnet_Teste_Resultado.md  Gemini2.5pro_Teste_Resultado.md  GeminiDeepResearch_Teste_Resultado.md  GrokDeeperSearch_Teste_Resultado.md  RESUMOS_PESQUISA_POR_model_llm.MD  VEREDITO.md
examples/: logging_example.py
fotix/src/fotix/: __init__.py
fotix/src/fotix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fotix/src/fotix/core/: __init__.py  decision_logic.py  duplicate_finder.py
fotix/src/fotix/domain/: __init__.py  models.py
src/fotix/: README.md  __init__.py  config.md  config.py  main.py
src/fotix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fotix/application/: README.md  __init__.py
src/fotix/application/services/: README.md  __init__.py  backup_restore_service.py  duplicate_management_service.py  scan_service.py
src/fotix/core/: README.md  __init__.py  duplicate_finder.py  interfaces.py  models.py  selection_strategy.py
src/fotix/infrastructure/: README.md  README_concurrency.md  __init__.py  backup.py  concurrency.py  file_system.py  interfaces.py  logging_config.py  zip_handler.py
src/fotix/ui/: README.md  __init__.py  main_window.py
src/fotix/ui/resources/: __init__.py  icons.py
src/fotix/ui/widgets/: __init__.py  duplicate_list_widget.py  file_info_widget.py  progress_dialog.py  settings_dialog.py
src/fotix/utils/: __init__.py  helpers.py  image_utils.py
tests/: .coverage  __init__.py  conftest.py
tests/backend_uats/: README.md  __init__.py  fix_update_config.py  test_backend_uats_fotix.py
tests/integration/: __init__.py
tests/integration/fotix/: __init__.py  test_config_logging_filesystem.py  test_main_integration.py
tests/integration/fotix/application/: __init__.py  test_application_services_integration.py  test_backup_restore_service_integration.py  test_duplicate_management_service_integration.py  test_scan_service_integration.py
tests/integration/fotix/core/: __init__.py  test_complex_scenarios_integration.py  test_composite_strategy_integration.py  test_duplicate_finder_selection_integration.py
tests/integration/fotix/infrastructure/: __init__.py  conftest.py  test_basic_infrastructure_integration.py  test_complete_infrastructure_integration.py  test_config_logging_integration.py  test_file_system_logging_integration.py  test_infraestrutura_basica.py  test_infrastructure_base_integration.py  test_zip_concurrency_backup_integration.py
tests/integration/fotix/ui/: README.md  __init__.py  test_ui_application_integration.py
tests/unit/: __init__.py  test_config.py
tests/unit/core/: __init__.py  test_decision_logic.py  test_duplicate_finder.py
tests/unit/fotix/: __init__.py  test_config.py  test_main.py
tests/unit/fotix/application/: __init__.py
tests/unit/fotix/config/: __init__.py  test_config.py  test_config_env.py  test_config_file.py  test_default_config.py
tests/unit/fotix/core/: __init__.py  test_duplicate_finder.py  test_interfaces.py  test_models.py  test_selection_strategy.py
tests/unit/fotix/infrastructure/: __init__.py  test_backup.py  (+5 more)
tests/unit/infrastructure/: __init__.py  test_file_system.py  test_logging_config.py  test_logging_config_extra.py  test_zip_handler.py
tests/unit/utils/: __init__.py  test_helpers.py
(+16 files in other folders)
